--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 9000:9000
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
-      - C:\Users\Antoine\Programmation\Ecole\5A_Polytech\LSDS\Hadoop_MR_Project:/hadoop/labs
+      - C:\Users\Antoine\Desktop\Programmation\Ecole\5A_Polytech\Hadoop-MR-Project:/hadoop/labs
     environment:
       - CLUSTER_NAME=test
     env_file:
@@ -24,7 +24,7 @@ services:
       - 9864:9864
     volumes:
       - hadoop_datanode:/hadoop/dfs/data
-      - C:\Users\Antoine\Programmation\Ecole\5A_Polytech\LSDS\Hadoop_MR_Project:/hadoop/labs
+      - C:\Users\Antoine\Desktop\Programmation\Ecole\5A_Polytech\Hadoop-MR-Project:/hadoop/labs
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
